// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemChooser #setupItemSections for chooser renders current selection if intialItems is defined (no headers) 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 1,
      },
      Object {
        "chosen": true,
        "id": 2,
      },
      Object {
        "chosen": true,
        "id": 3,
      },
    ],
    "label": undefined,
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders current selection with header if initialItems and addedItems are defined  1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": false,
        "id": 1,
      },
    ],
    "label": "Current Selection",
  },
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 2,
      },
      Object {
        "chosen": true,
        "id": 3,
      },
    ],
    "label": "Added",
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders sections 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": false,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
    "label": "Current Selection",
  },
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 5,
      },
    ],
    "label": "Added",
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders suggested items when search term supplied 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders suggested items when search term supplied 2`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
  },
]
`;

exports[`ItemChooser #setupItemSections for picker renders default suggested items 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": false,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
    "label": "Recent Items",
  },
]
`;

exports[`ItemChooser #setupItemSections for picker renders sections 1`] = `Array []`;

exports[`ItemChooser #setupItemSections for picker renders suggested items when search term supplied 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "id": 2,
      },
      Object {
        "id": 3,
      },
    ],
  },
]
`;

exports[`ItemChooser full renders as expected 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <View>
    <View>
      <Icon
        name="Search"
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        autoFocus={true}
        editable={true}
        onChangeText={[Function]}
        onFocus={[MockFunction]}
        placeholder="Begin type to searching"
        rejectResponderTermination={true}
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <RCTScrollView
    ListFooterComponent={<View />}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={Array []}
    stickyHeaderIndices={Array []}
    stickySectionHeadersEnabled={true}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View />
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`ItemChooser shallow renders as expected 1`] = `
<ForwardRef(_SafeAreaView)>
  <ItemChooserListHeader
    ItemRowComponent={[Function]}
    autoFocus={true}
    clearSearchTerm={[Function]}
    fetchSearchSuggestions={[Function]}
    getSearchSuggestions={[Function]}
    initialItems={Array []}
    onFocus={[MockFunction]}
    searchPlaceholder="Begin type to searching"
    setSearchTerm={[Function]}
    suggestedItems={Array []}
  />
  <SectionList
    ListFooterComponent={<View />}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={Array []}
    stickySectionHeadersEnabled={true}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(_SafeAreaView)>
`;
